plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.bytebuddy:byte-buddy:1.15.10'
    implementation 'software.amazon.awssdk:s3:2.29.17'
    implementation 'software.amazon.awssdk.crt:aws-crt:0.33.1'

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
    applicationDefaultJvmArgs = [
            '--add-exports=java.xml/com.sun.xml.internal.stream=ALL-UNNAMED',
            '-Daws.accessKeyId=',
            '-Daws.secretAccessKey=',
            '-Daws.sessionToken=',
            '-Daws.region=us-east-1',
            '-Daws.bucket='
    ]
}
